--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "leaflet-loading": "0.1.24",
     "leaflet-measurable": "0.1.0",
     "leaflet-minimap": "^3.6.1",
+    "leaflet-textpath": "github:umap-project/Leaflet.TextPath#patched",
     "leaflet-toolbar": "umap-project/Leaflet.toolbar",
     "leaflet.heat": "0.2.0",
     "leaflet.locatecontrol": "0.81.1",
