--- a/charts/umap/values.yaml
+++ b/charts/umap/values.yaml
@@ -95,6 +95,37 @@ umap:
   # In this case the values above are not used
   configFromSecret: null
 
+nginx:
+  image:
+    repository: nginx
+    pullPolicy: IfNotPresent
+    # Overrides the image tag
+    tag: 1.27-alpine
+
+  securityContext:
+    capabilities:
+      drop:
+      - ALL
+    readOnlyRootFilesystem: true
+    runAsNonRoot: true
+    runAsUser: 1000
+
+  service:
+    type: ClusterIP
+    port: 8080
+
+  resources: {}
+    # We usually recommend not to specify default resources and to leave this as a conscious
+    # choice for the user. This also increases chances charts run on environments with little
+    # resources, such as Minikube. If you do want to specify resources, uncomment the following
+    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    # limits:
+    #   cpu: 100m
+    #   memory: 128Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 128Mi
+
 persistence:
   enabled: true
   accessModes:
