--- a/charts/umap/templates/service.yaml
+++ b/charts/umap/templates/service.yaml
@@ -8,6 +8,22 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
+      targetPort: asgi
+      protocol: TCP
+      name: asgi
+  selector:
+    {{- include "umap.selectorLabels" . | nindent 4 }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "umap.fullname" . }}-nginx
+  labels:
+    {{- include "umap.labels" . | nindent 4 }}
+spec:
+  type: {{ .Values.nginx.service.type }}
+  ports:
+    - port: {{ .Values.nginx.service.port }}
       targetPort: http
       protocol: TCP
       name: http
