--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,8 @@ nav:
       - Nginx: deploy/nginx.md
       - ASGI: deploy/asgi.md
       - WSGI: deploy/wsgi.md
+  - Maintenance:
+      - Management commands: maintenance/management_commands.md
   - Changelog: changelog.md
 theme:
   name: material
