--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@dwayneparton/geojson-to-gpx": "^0.2.0",
     "@placemarkio/tokml": "0.3.4",
     "@tmcw/togeojson": "^7.1.0",
+    "betterknown": "^1.0.5",
     "colorbrewer": "1.5.7",
     "csv2geojson": "github:umap-project/csv2geojson#patched",
     "dompurify": "3.2.4",
