--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "leaflet.markercluster": "^1.5.3",
     "leaflet.path.drag": "0.0.6",
     "leaflet.photon": "0.9.2",
+    "openrouteservice-js": "^0.4.1",
     "osmtogeojson": "^3.0.0-beta.5",
     "simple-statistics": "7.8.5"
   },
