wip: use simple-elevation-chart from npm
Co-authored-by: Yohan Boniface <yohanboniface@free.fr>

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "leaflet.photon": "0.9.2",
     "openrouteservice-js": "^0.4.1",
     "osmtogeojson": "^3.0.0-beta.5",
+    "simple-elevation-chart": "^1.0.0",
     "simple-statistics": "7.8.5"
   },
   "browserslist": [
