--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
       - Nginx: deploy/nginx.md
       - ASGI: deploy/asgi.md
       - WSGI: deploy/wsgi.md
+      - Dokku: deploy/dokku.md
   - Maintenance:
       - Management commands: maintenance/management_commands.md
   - Changelog: changelog.md
@@ -67,3 +68,4 @@ markdown_extensions:
   - pymdownx.tabbed:
       alternate_style: true
       combine_header_slug: true
+  - pymdownx.snippets
