--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,12 +20,13 @@ nav:
       - Importers: config/importers.md
   - Deployment:
       - Overview: deploy/overview.md
-      - Docker: deploy/docker.md
-      - Helm: deploy/helm.md
-      - Nginx: deploy/nginx.md
-      - ASGI: deploy/asgi.md
       - WSGI: deploy/wsgi.md
+      - ASGI: deploy/asgi.md
+      - Nginx: deploy/nginx.md
+      - Docker: deploy/docker.md
       - Dokku: deploy/dokku.md
+      - Yunohost: deploy/yunohost.md
+      - Helm: deploy/helm.md
   - Maintenance:
       - Management commands: maintenance/management_commands.md
   - Changelog: changelog.md
