--- a/.github/workflows/test-docs.yml
+++ b/.github/workflows/test-docs.yml
@@ -46,7 +46,7 @@ jobs:
           sudo apt update
           sudo apt install libgdal-dev
           python -m pip install --upgrade pip
-          make develop
+          make ci
           npm install mocha
       - name: run tests
         run: make test
